<package format="3">
  <name>dynamixel_pantilt</name>
  <version>0.0.0</version>
  <description>
    Pan-tilt camera controller
  </description>
  <maintainer email="h-yokoyama@craft-server.co.jp">Hiroki Yokoyama</maintainer>

  <author>Hiroki Yokoyama</author>

  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend></exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
